[gd_scene load_steps=3 format=3 uid="uid://cpp0edwi2ybai"]

[ext_resource type="Script" path="res://Scenes/Loot/loot_object.gd" id="1_7dn4w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f10v1"]
radius = 26.0768

[node name="LootObject" type="Area2D"]
collision_layer = 32
collision_mask = 97
script = ExtResource("1_7dn4w")

[node name="LootSprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)

[node name="LootCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_f10v1")

[node name="Stacked" type="Label" parent="."]
offset_left = 9.0
offset_top = 6.0
offset_right = 49.0
offset_bottom = 29.0
text = "Hi
"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
